--- a/index.html
+++ b/index.html
@@ -69,14 +69,10 @@ Welcome Slider
 		<source src="images/banner/hero-video.mp4" type="video/mp4">
 	</video> -->
 	<div class="block">
-		<div class="video-button">
-			<a class="popup-video" href="https://www.youtube.com/watch?v=jrkvirglgaQ">
-				<i class="tf-ion-play"></i>
-		</a>
-		</div>
-		<h1>Experience the new reality</h1>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.  Fugit, excepturi. At recusandae sit perferendis autem,iste tempora nostrum numquam sapiente!</p>
-		<a data-scroll href="#services" class="btn btn-transparent">Explore Us</a>
+		
+		<h1>KOFAX TECNOLOGIAS</h1>
+		<p>Tecnologías Web y sistemas de vigilancia profesional</p>
+		<a data-scroll href="#services" class="btn btn-transparent">SERVICIOS</a>
 	</div>
 </section>
 
