--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Welcome Slider
 	</video> -->
 	<div class="block">
 		
-		<h1>KOFAX TECNOLOGIAS</h1>
+		<h1>KOFAX</h1>
 		<p>Tecnologías Web y sistemas de vigilancia profesional</p>
 		<a data-scroll href="#services" class="btn btn-transparent">SERVICIOS</a>
 	</div>
